<?xml version="1.0" encoding="utf-8"?>
<menu tools:showIn="navigation_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home" />

        <item
            android:id="@+id/navigation_assignment"
            android:icon="@drawable/ic_assignment_black_24dp"
            android:title="@string/title_assignment" />

        <item
            android:id="@+id/navigation_degree"
            android:icon="@drawable/ic_assignment_degree"
            android:title="@string/title_degree" />

        <item
            android:id="@+id/navigation_attendance"
            android:icon="@drawable/ic_format_atendance"
            android:title="@string/attendance" />

        <item
            android:id="@+id/navigation_teachers"
            android:icon="@drawable/ic_teachers"
            android:title="@string/teachers" />
        <item
            android:id="@+id/navigation_bus"
            android:icon="@drawable/ic_directions_bus"
            android:title="@string/track_school_bus" />
        <item
            android:id="@+id/navigation_time_table"
            android:icon="@drawable/ic_time_table"
            android:title="@string/time_table" />
        <item
            android:id="@+id/navigation_fees"
            android:icon="@drawable/ic_attach_fees"
            android:title="@string/student_fees" />
    </group>

</menu>
