<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.tztechs.student.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_assignment"
        android:name="com.tztechs.student.ui.assignment.AssignmentFragment"
        android:label="@string/title_assignment"
        tools:layout="@layout/fragment_assignment" />

    <fragment
        android:id="@+id/navigation_degree"
        android:name="com.tztechs.student.ui.degree.DegreeFragment"
        android:label="@string/title_degree"
        tools:layout="@layout/fragment_degree" />
    <fragment
        android:id="@+id/navigation_attendance"
        android:name="com.tztechs.student.ui.attendance.AttendanceFragment"
        android:label="@string/title_degree"
        tools:layout="@layout/fragment_degree" />
    <fragment
        android:id="@+id/navigation_teachers"
        android:name="com.tztechs.student.ui.teachers.TeachersFragment"
        android:label="@string/title_degree"
        tools:layout="@layout/fragment_degree" />
</navigation>