<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_profile"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="70dp"
        app:cardCornerRadius="10sp"
        android:paddingStart="10sp"
        android:paddingEnd="20sp"
        app:cardBackgroundColor="#ffffff"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20sp"
            android:paddingEnd="20sp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/child_vector"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/child"
                    app:civ_border_color="#FF5722"
                    app:civ_border_width="2dp"
                    android:layout_marginTop="10dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/student_name"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"
                    android:textSize="20sp"/>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="40dp"
                android:layout_height="150dp"
                android:layout_marginStart="20dp"
                android:background="@color/white"
                android:layout_gravity="end"
                app:srcCompat="@drawable/ic_format_atendance"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Be careful to monitor your child's attendance to school regularly "
                android:gravity="center_horizontal|center_vertical"
                android:textColor="@color/orange"
                android:textSize="15sp"/>
        </LinearLayout>


    </androidx.cardview.widget.CardView>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/card_profile"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="150dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="20dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="5dp"
                    app:srcCompat="@drawable/ic_format_atendance"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/attendance"
                    android:gravity="bottom"
                    android:padding="5dp"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>

            </LinearLayout>
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginTop="10dp">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="@string/attendance_today"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="20dp"
                        android:gravity="center_horizontal">
                        <View
                            android:layout_width="1dp"
                            android:layout_height="20sp"
                            android:background="@drawable/spencil"
                            />
                        <androidx.cardview.widget.CardView
                            android:layout_width="80dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center_horizontal"
                            android:padding="10dp">

                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/math"
                                android:textColor="@color/blue"

                                />
                        </androidx.cardview.widget.CardView>

                        <View
                            android:layout_width="1dp"
                            android:layout_height="20sp"
                            android:background="#AD8B7A"
                            />
                        <androidx.cardview.widget.CardView
                            android:layout_width="80dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center_horizontal"
                            android:padding="10dp">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="Arabic"
                                android:textColor="@color/blue"
                                />
                        </androidx.cardview.widget.CardView>

                        <View
                            android:layout_width="1dp"
                            android:layout_height="20sp"
                            android:background="#AD8B7A"
                            android:padding="5dp"
                            />
                        <androidx.cardview.widget.CardView
                            android:layout_width="80dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center_horizontal"
                            android:padding="10dp">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="Science"
                                android:textColor="@color/blue"
                                android:padding="5dp"/>
                        </androidx.cardview.widget.CardView>

                        <View
                            android:layout_width="1dp"
                            android:layout_height="20sp"
                            android:background="@drawable/spencil"
                            android:padding="5dp"
                            />
                    </LinearLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_horizontal"
                        android:layout_marginTop="10dp">
                        <androidx.cardview.widget.CardView
                            android:layout_width="80dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center_horizontal"
                            android:padding="10dp">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="attend"
                                android:textColor="@color/green"
                                android:padding="5dp"/>
                        </androidx.cardview.widget.CardView>

                        <View
                            android:layout_width="1dp"
                            android:layout_height="20sp"
                            android:background="#AD8B7A"
                            android:padding="5dp"
                            />
                        <androidx.cardview.widget.CardView
                            android:layout_width="80dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center_horizontal"
                            android:padding="10dp">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="attend"
                                android:textColor="@color/green"
                                android:padding="5dp"/>
                        </androidx.cardview.widget.CardView>

                        <View
                            android:layout_width="1dp"
                            android:layout_height="20sp"
                            android:background="#AD8B7A"
                            android:padding="5dp"
                            />
                        <androidx.cardview.widget.CardView
                            android:layout_width="80dp"
                            android:layout_height="30dp"
                            android:layout_gravity="center_horizontal"
                            android:padding="10dp">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="attend"
                                android:textColor="@color/green"
                                android:padding="5dp"/>
                        </androidx.cardview.widget.CardView>


                    </LinearLayout>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:text="Attendance Last Days"/>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center_horizontal">

                        <View
                            android:layout_width="80dp"
                            android:layout_height="50sp"
                            android:background="@drawable/ic_arrow_down"
                            android:padding="5dp"
                            />
                    </LinearLayout>

                </LinearLayout>
            </ScrollView>

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>