<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_profile"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="70dp"
        app:cardCornerRadius="10sp"
        android:paddingStart="10sp"
        android:paddingEnd="20sp"
        app:cardBackgroundColor="#ffffff"
        app:layout_constraintTop_toTopOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="20sp"
            android:paddingEnd="20sp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/child_vector"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:src="@drawable/child"
                    app:civ_border_color="#FF5722"
                    app:civ_border_width="2dp"
                    android:layout_marginTop="10dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/student_name"
                    android:gravity="center_horizontal"
                    android:textStyle="bold"
                    android:textSize="20sp"/>

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="100dp"
                android:layout_height="150dp"
                android:layout_marginStart="50dp"
                android:background="@color/white"
                android:layout_gravity="end"
                app:srcCompat="@drawable/assign"/>
        </LinearLayout>


    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/card_profile"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="150dp">
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp">
                <View
                    android:layout_width="3dp"
                    android:layout_height="30sp"
                    android:background="@drawable/spencil"
                    />
                <androidx.cardview.widget.CardView
                    android:layout_width="119dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    app:cardBackgroundColor="#F8ECE6"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Subject"
                        />
                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="3dp"
                    android:layout_height="30sp"
                    android:background="@drawable/spencil"
                    />
                <androidx.cardview.widget.CardView
                    android:layout_width="79dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    app:cardBackgroundColor="#F8ECE6"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Today"
                        android:padding="5dp"/>
                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="3dp"
                    android:layout_height="30sp"
                    android:background="@drawable/spencil"
                    />
                <androidx.cardview.widget.CardView
                    android:layout_width="79dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    app:cardBackgroundColor="#F8ECE6"
                    android:padding="10dp">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Yesterday"
                        android:padding="5dp"/>
                </androidx.cardview.widget.CardView>




                <View
                    android:layout_width="20sp"
                    android:layout_height="30sp"
                    android:background="@drawable/ic_arrow_right"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                >
                <View
                    android:layout_width="1dp"
                    android:layout_height="30sp"
                    android:background="@drawable/spencil"
                    />
                <androidx.cardview.widget.CardView
                    android:layout_width="120dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Arabic"
                        />
                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="1dp"
                    android:layout_height="20sp"
                    android:background="#AD8B7A"
                    />
                <androidx.cardview.widget.CardView
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:padding="10dp">
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="No"
                        android:background="#ffffff"
                        android:textColor="#4CAF50"
                        android:padding="5dp"/>
                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="1dp"
                    android:layout_height="20sp"
                    android:background="#AD8B7A"
                    android:padding="5dp"
                    />
                <androidx.cardview.widget.CardView
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:padding="10dp">
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="check"
                        android:textColor="#F44336"
                        android:padding="5dp"/>
                </androidx.cardview.widget.CardView>


                <View
                    android:layout_width="20dp"
                    android:layout_height="30sp"
                    android:background="@drawable/ic_arrow_right"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp">
                <View
                    android:layout_width="1dp"
                    android:layout_height="30sp"
                    android:background="@drawable/spencil"
                    />
                <androidx.cardview.widget.CardView
                    android:layout_width="120dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="English"
                        />
                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="1dp"
                    android:layout_height="20sp"
                    android:background="#AD8B7A"
                    />
                <androidx.cardview.widget.CardView
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:padding="10dp">
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="check"
                        android:textColor="#F44336"
                        android:padding="5dp"/>
                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="1dp"
                    android:layout_height="20sp"
                    android:background="#AD8B7A"
                    android:padding="5dp"
                    />
                <androidx.cardview.widget.CardView
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:padding="10dp">
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="No"
                        android:background="#ffffff"
                        android:textColor="#4CAF50"
                        android:padding="5dp"/>
                </androidx.cardview.widget.CardView>



                <View
                    android:layout_width="20dp"
                    android:layout_height="30sp"
                    android:background="@drawable/ic_arrow_right"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_horizontal"
                android:layout_marginTop="10dp">
                <View
                    android:layout_width="1dp"
                    android:layout_height="30sp"
                    android:background="@drawable/spencil"
                    />
                <androidx.cardview.widget.CardView
                    android:layout_width="120dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/math"
                        />
                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="1dp"
                    android:layout_height="20sp"
                    android:background="#AD8B7A"
                    />
                <androidx.cardview.widget.CardView
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:padding="10dp">
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="check"
                        android:textColor="#F44336"
                        android:padding="5dp"/>
                </androidx.cardview.widget.CardView>

                <View
                    android:layout_width="1dp"
                    android:layout_height="20sp"
                    android:background="#AD8B7A"
                    android:padding="5dp"
                    />
                <androidx.cardview.widget.CardView
                    android:layout_width="80dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center_horizontal"
                    android:padding="10dp">
                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="No"
                        android:background="#ffffff"
                        android:textColor="#4CAF50"
                        android:padding="5dp"/>
                </androidx.cardview.widget.CardView>


                <View
                    android:layout_width="20dp"
                    android:layout_height="30sp"
                    android:background="@drawable/ic_arrow_right"
                    />

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center_horizontal"
                    android:layout_marginTop="10dp">



                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:textColor="#000000"
                            android:text="@string/there_was_home_work"/>




                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="match_parent"
                        android:layout_height="80dp"
                        android:background="@color/white"
                        app:srcCompat="@drawable/home_work"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:textColor="#FFC107"
                        android:text="@string/check_bag"/>

                </LinearLayout>


            </LinearLayout>



        </LinearLayout>
 </ScrollView>


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>